--- a/scripts/nanoflannConfig.cmake.in
+++ b/scripts/nanoflannConfig.cmake.in
@@ -2,4 +2,5 @@
 
 include("${CMAKE_CURRENT_LIST_DIR}/nanoflannTargets.cmake")
 
-set_and_check(nanoflann_INCLUDE_DIR "@PACKAGE_INSTALL_INCLUDE_DIR@")
+# (JLBC Feb 2021: Not used anymore?)
+#set_and_check(nanoflann_INCLUDE_DIR "@PACKAGE_INSTALL_INCLUDE_DIR@")
