--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
       - checkout
       - run: |
           apt update
-          apt install build-essential cmake libeigen3-dev -y
+          DEBIAN_FRONTEND=noninteractive apt install build-essential cmake libeigen3-dev -y
       - run: cmake -DCMAKE_VERBOSE_MAKEFILE=ON -H. -Bbuild
       - run: make -C build
       - run: make CTEST_OUTPUT_ON_FAILURE=1 test -C build
