--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -13,6 +13,7 @@ DEFINE_EXAMPLE(dynamic_pointcloud_example)
 DEFINE_EXAMPLE(pointcloud_example)
 DEFINE_EXAMPLE(pointcloud_kdd_radius)
 DEFINE_EXAMPLE(pointcloud_adaptor_example)
+DEFINE_EXAMPLE(pointcloud_custom_metric)
 DEFINE_EXAMPLE(SO3_adaptor_example)
 DEFINE_EXAMPLE(SO2_adaptor_example)
 DEFINE_EXAMPLE(saveload_example)
