add bearings NN example

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -26,4 +26,5 @@ endif()
 find_package(mrpt-gui QUIET)
 if (mrpt-gui_FOUND)
 	add_subdirectory(examples_gui/nanoflann_gui_example_R3)
+	add_subdirectory(examples_gui/nanoflann_gui_example_bearings)
 endif()
