basic example for custom result set

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -12,6 +12,7 @@ DefineExample(pointcloud_example)
 DefineExample(pointcloud_kdd_radius)
 DefineExample(pointcloud_adaptor_example)
 DefineExample(pointcloud_custom_metric)
+DefineExample(pointcloud_custom_resultset)
 DefineExample(SO3_adaptor_example)
 DefineExample(SO2_adaptor_example)
 DefineExample(saveload_example)
