add SO2 GUI example for debugging

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -23,9 +23,4 @@ if(EIGEN3_FOUND)
 	target_include_directories (matrix_example PRIVATE ${EIGEN3_INCLUDE_DIR})
 endif()
 
-# optional for gui examples:
-find_package(mrpt-gui QUIET)
-if (mrpt-gui_FOUND)
-	add_subdirectory(examples_gui/nanoflann_gui_example_R3)
-	add_subdirectory(examples_gui/nanoflann_gui_example_bearings)
-endif()
+add_subdirectory(examples_gui)
