Look for Threads dependency in CMake config script

--- a/scripts/nanoflannConfig.cmake.in
+++ b/scripts/nanoflannConfig.cmake.in
@@ -1,5 +1,8 @@
 @PACKAGE_INIT@
 
+include(CMakeFindDependencyMacro)
+find_dependency(Threads)
+
 include("${CMAKE_CURRENT_LIST_DIR}/nanoflannTargets.cmake")
 
 # (JLBC Feb 2021: Not used anymore?)
